--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint-plugin-prettier": "^4.2.1",
     "gatsby": "^4.23.0",
     "gatsby-plugin-image": "^2.23.0",
     "gatsby-plugin-manifest": "^4.23.0",
@@ -32,6 +33,16 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.8.3"
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "add": "^2.0.6",
+    "eslint": "^8.23.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-webpack-plugin": "^3.2.0",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "or": "^0.2.0",
+    "prettier": "2.7.1",
+    "typescript": "^4.8.3",
+    "yarn": "^1.22.19"
   }
 }
