--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "just-travel-desafio",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "description": "just-travel-desafio",
   "author": "luanfmarques",
@@ -27,12 +27,14 @@
     "gatsby-transformer-sharp": "^4.23.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "add": "^2.0.6",
