--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "just-travel-desafio",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "private": true,
   "description": "just-travel-desafio",
   "author": "luanfmarques",
@@ -21,6 +21,7 @@
     "gatsby": "^4.23.0",
     "gatsby-plugin-image": "^2.23.0",
     "gatsby-plugin-manifest": "^4.23.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.23.0",
     "gatsby-plugin-styled-components": "^5.23.0",
     "gatsby-source-filesystem": "^4.23.0",
@@ -44,6 +45,7 @@
     "gatsby-plugin-eslint": "^4.0.2",
     "or": "^0.2.0",
     "prettier": "2.7.1",
+    "svg-react-loader": "^0.4.6",
     "typescript": "^4.8.3",
     "yarn": "^1.22.19"
   }
