--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "just-travel-desafio",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "description": "just-travel-desafio",
   "author": "luanfmarques",
@@ -13,9 +13,12 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:coverage": "jest --coverage --collectCoverageFrom='./src/**'"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint-plugin-prettier": "^4.2.1",
     "gatsby": "^4.23.0",
@@ -32,6 +35,11 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/istanbul-lib-coverage": "^2.0.4",
+    "@types/jest": "^29.0.3",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
@@ -39,10 +47,15 @@
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "add": "^2.0.6",
+    "babel-jest": "^29.0.3",
+    "babel-preset-gatsby": "^2.23.0",
     "eslint": "^8.23.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
     "gatsby-plugin-eslint": "^4.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "or": "^0.2.0",
     "prettier": "2.7.1",
     "svg-react-loader": "^0.4.6",
